Kubernetecs/Kafka/Strimzi-Operator/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-external
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kafka.ambel.co
    - broker-0.kafka.ambel.co
  rules:
  - host: kafka.ambel.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-kafka-external-bootstrap
            port:
              number: 9094
  - host: broker-0.kafka.ambel.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-broker-0
            port:
              number: 9094
